--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Home</a>
+                            <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Pacotes</a>
+                            <a class="nav-link" href="#pacotes">Pacotes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)">Contatos</a>
+                            <a class="nav-link" href="#contatos">Contatos</a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -52,7 +52,7 @@
 
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
-                <div class="carousel-item active ">
+                <div class="carousel-item active " id="home">
                     <img src="img/palacio.jpg" alt="Palmas do Tocantins" class="d-block w-100 car-img">
                     <div class="carousel-caption">
                         <h3>Palmas Tocantins</h3>
@@ -86,43 +86,50 @@
         </div>
 
         <!--Divisão-->
-        <div class="container-fluid divisao">
+        <div class="container-fluid divisao" id="pacotes">
             <h2>Conheça o Tocantins</h2>
         </div>
 
         <!--Pacotes-->
         <section class="row sec-pacotes">
             <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="img/palacio (1).jpg" alt="Card image">
+                <img class="card-img-top" src="img/palacio (1).jpg" alt="Palacio de palmas">
                 <div class="card-body">
                     <h4 class="card-title">Palmas</h4>
                     <p class="card-text">Conheça a Capital</p>
-                    <a href="#" class="btn btn-primary">Compra Pacote</a>
+                    <a target="_blank"
+                        href="https://www.decolar.com/pacotes/pmw/pacotes-para-palmas?mktdata=accountid%3D1574955074%26pr%3DG%26cc%3DBR%26adjust_t%3Desobv7_ffxd4s_3fh53i%26kw%3D%26c%3D0%26mt%3Db%26n%3D%26p%3D%26ap%3D%26d%3Dc%26dm%3D%26targetid%3D%26campaignid%3D1619328188%26adgroupid%3D67158201291%26ExperimentId%3D%26locationid%3D%26adjust_adgroup%3D67158201291%26adjust_campaign%3D1619328188%26adjust_creative%3D0%26key%3DUT81AK9JAFEGJ4D69OVO6J673E%26adjust_tracker_limit%3D1000000000%26id%3D20230227070026130105408649728070%26trackeame_user_id%3D128F5A984DB716757789698205b4e85bb-8651-4300-b424-282f580f9bb422198035&mktdata=accountid%3D1359067460%26pr%3DX%26cc%3DBR%26adjust_t%3Desobv7_ffxd4s_3fh53i%26kw%3D%26c%3D765572321727%26mt%3D%26n%3Dg%26p%3D%26ap%3D%26d%3Dc%26dm%3D%26targetid%3Ddsa-2186302189342%26campaignid%3D22830622441%26adgroupid%3D182433668106%26ExperimentId%3D%26locationid%3D1031867%26adjust_adgroup%3D182433668106%26adjust_campaign%3D22830622441%26adjust_creative%3D765572321727%26key%3DUT81AK9JAFEGJ4D69OVO6J673E%26adjust_tracker_limit%3D1000000000%26gclid%3DCj0KCQjwvJHIBhCgARIsAEQnWlBGlrY3tM_cAd_u05AXGOga6QYw7AkuSDm4efJ_lPHUlY2n4j-v6XcaAoyGEALw_wcB%26id%3D20251101000712140801873797043182%26trackeame_user_id%3D1206F7A840AB175753849808093f44891-59d8-40d1-87bc-a56ac23a51a7130549825&clt_n=g&clt_c=765572321727&adjust_adgroup=182433668106&adjust_campaign=22830622441&adjust_t=esobv7_ffxd4s_3fh53i&adjust_creative=765572321727&adjust_tracker_limit=1000000000&gad_source=1&gad_campaignid=22830622441&gbraid=0AAAAADy0RUDgdvVl0zhiTWVG-EJI0ObA9&gclid=Cj0KCQjwvJHIBhCgARIsAEQnWlBGlrY3tM_cAd_u05AXGOga6QYw7AkuSDm4efJ_lPHUlY2n4j-v6XcaAoyGEALw_wcB"
+                        class="btn btn-primary">Compra Pacote</a>
                 </div>
             </div>
 
             <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="img/japala.png" alt="Card image">
+                <img class="card-img-top" src="img/japala.png" alt="Fervedouro do Ceiça">
                 <div class="card-body">
                     <h4 class="card-title">Jalapão</h4>
                     <p class="card-text">Jalapão paraiso natural</p>
-                    <a href="#" class="btn btn-primary">Compra Pacote</a>
+                    <a target="_blank"
+                        href="https://agrestejalapao.com/?gad_source=1&gad_campaignid=19906793911&gbraid=0AAAAApeNzAZOwonR2GOhnf4d_Tvgi3v30&gclid=Cj0KCQjwvJHIBhCgARIsAEQnWlDR4_-PPeGOj9pBpWgpxZxSGl_o49ya4qEdtjMk2PnfWKcrHNM4PKkaAjIDEALw_wcB"
+                        class="btn btn-primary">Compra Pacote</a>
                 </div>
             </div>
             <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="img/jalapon-4289637_1920 (1).jpg" alt="Card image">
+                <img class="card-img-top" src="img/d7f1f8908fbb655535b934dfe1854c53 (2).png" alt="Lagoa do Japonês">
                 <div class="card-body">
-                    <h4 class="card-title">Dunas Jalapão</h4>
-                    <p class="card-text">Beleza Natural</p>
+                    <h4 class="card-title">Lagoa do Japonês</h4>
+                    <p class="card-text">Conhecida por suas águas incrivelmente cristalinas</p>
                     <a href="#" class="btn btn-primary">Compra Pacote</a>
                 </div>
             </div>
             <div class="card col-3" style="width:300px">
-                <img class="card-img-top" src="img/nativa (1) (1).png" alt="Card image">
+                <img class="card-img-top" src="img/nativa (1) (1).png"
+                    alt="Ruínas da Igreja de Nossa Senhora do Rosário dos Pretos">
                 <div class="card-body">
                     <h4 class="card-title">Natividade</h4>
                     <p class="card-text">Cidade histórica</p>
-                    <a href="#" class="btn btn-primary">Compra Pacote</a>
+                    <a target="_blank"
+                        href="https://www.tripadvisor.com.br/Hotels-g2572606-c2-Natividade_State_of_Tocantins-Hotels.html"
+                        class="btn btn-primary">Compra Pacote</a>
                 </div>
             </div>
         </section>
@@ -152,7 +159,7 @@
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
-        <div class="col-6">
+        <div class="col-6" id="contatos">
             <div class="row links">
                 <div class="col-sm-6">
                     <h5>WhatsApp</h5>
