--- a/index.html
+++ b/index.html
@@ -53,21 +53,39 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active " id="home">
-                    <img src="img/palacio.jpg" alt="Palmas do Tocantins" class="d-block w-100 car-img">
+                    <div class="ratio ratio-16x9">
+                        <iframe width="560" height="700"
+                            src="https://www.youtube.com/embed/BHwmWp-KtJ4?si=AUm_wz1j5RD5H_NCcontrols=0&autoplay=1&mute=1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                     <div class="carousel-caption">
                         <h3>Palmas Tocantins</h3>
                         <p>Conheça a Capital do Estado</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/jalapon.jpg" alt="Dunas do Jalapão" class="d-block w-100 car-img">
+                    <div class="ratio ratio-16x9">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/R2V07E58Gwg?si=uCLRyUHVWaNybxKbcontrols=0&autoplay=1&mute=1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                     <div class="carousel-caption">
                         <h3>Jalapão</h3>
                         <p>O Jalapão é um paraiso natural</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/nativa.png" alt="Natividade" class="d-block w-100 car-img">
+                    <div class="ratio ratio-16x9">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/OXQzRZ44260?si=MSfjkIcc3CoWpYI9controls=0&autoplay=1&mute=1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                     <div class="carousel-caption">
                         <h3>Natividade</h3>
                         <p>Cidade histórica e de muitas tradição</p>
